# OpenIon

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
app/: Cargo.toml
app/src/: lib.rs
arch/: Cargo.toml
arch/src/: lib.rs
arch/src/arm/cortex_m/: context.rs  irq.rs  mod.rs  nvic.rs  systick.rs
arch/src/riscv/: context.rs  irq.rs  mod.rs  pmp.rs  sbi.rs  sv39.rs  timer.rs  trap.S  trap.rs
arch/src/riscv/hypervisor/: entry.S  entry.rs  gstage.rs  mod.rs  sbi.rs
bootloader/: Cargo.toml
bootloader/src/: main.rs
config/: openion.schema.toml
drivers/cmsdk_uart/: Cargo.toml
drivers/cmsdk_uart/src/: lib.rs
drivers/lan9118/: Cargo.toml
drivers/lan9118/src/: lib.rs  register.rs
drivers/ns16550a/: Cargo.toml
drivers/ns16550a/src/: lib.rs
drivers/virtio_blk/: Cargo.toml
drivers/virtio_blk/src/: lib.rs
kernel/: Cargo.toml  build.rs
kernel/src/: arch.rs  fdt.rs  generated_config.rs  lib.rs  log.rs  platform.rs  shell.rs  sync.rs  timer.rs  version.rs
kernel/src/driver/: block.rs  char.rs  manager.rs  mod.rs  net.rs  pool.rs
kernel/src/fs/: detect.rs  exfat.rs  mod.rs
kernel/src/irq/: mod.rs
kernel/src/mm/: addr.rs  frame.rs  mod.rs  slab.rs  tlsf.rs
kernel/src/net/: mod.rs  posix.rs  stack.rs
kernel/src/net/ionnet/: mod.rs
kernel/src/net/smoltcp/: device.rs  mod.rs  socket.rs
kernel/src/process/: elf.rs  mod.rs
kernel/src/sched/: mod.rs  ready_queue.rs  task.rs
platform/qemu-an521/: Cargo.toml  linker.ld  startup.s
platform/qemu-an521/src/: irq.rs  main.rs
platform/qemu-virt-riscv/: Cargo.toml  linker.ld  startup.s
platform/qemu-virt-riscv/src/: main.rs  plic.rs  timer.rs
xtask/: Cargo.toml
xtask/src/: main.rs
