[package]
name = "app"
version = "0.1.0"
edition = "2024"

[lib]
test = false
bench = false

[dependencies]
kernel = { path = "../kernel", default-features = false }
arch = { path = "../arch", default-features = false }

[features]
default = ["builtin_shell"]
builtin_shell = ["kernel/builtin_shell"]
