[package]
name = "an521"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "an521"
test = false
bench = false


[dependencies]
kernel = { path = "../../kernel", default-features = false }
arch = { path = "../../arch", default-features = false }
app = { path = "../../app", default-features = false }
cmsdk_uart = { path = "../../drivers/cmsdk_uart" }
lan9118 ={ path = "../../drivers/lan9118" }

[features]
default = ["builtin_shell"]
builtin_shell = ["app/builtin_shell"]
