[package]
name = "qemu-virt-riscv"
version = "0.1.0"
authors = ["Surplars <surplars@vip.qq.com>"]
edition = "2024"

[[bin]]
name = "qemu-virt-riscv"
test = false
bench = false

[dependencies]
app = { path = "../../app", default-features = false }
arch = { path = "../../arch", default-features = false }
kernel = { path = "../../kernel", default-features = false }
ns16550a = { path = "../../drivers/ns16550a" }
virtio_blk = { path = "../../drivers/virtio_blk" }
spin = "0.10.0"

[features]
default = ["s-mode", "builtin_shell"]
builtin_shell = ["app/builtin_shell"]
m-mode = ["arch/m-mode"]
s-mode = ["arch/s-mode"]
